# vrp-study

./: memory_leak.sh  pyproject.toml
notebooks/: benchmarks.ipynb  benchmarks_data_collector.ipynb  benchmarks_long_route.ipynb  column_generation.ipynb  lkh.ipynb
src/pfa_study/: __init__.py
src/vrp_study/: __init__.py  common_model.py  configs.py  data_loader.py  initial_solution_builder.py  routing_manager.py
src/vrp_study/initial_solution/: pdptw_solution_builder.py
src/vrp_study/managers/: pdptw_routing_manager_builder.py
src/vrp_study/or_tools/: callback.py  model.py
src/vrp_study/pdptw_model/: pdptw_routing_manager_builder.py  routing_model.py  solution_builder.py  solution_checker.py
tests/: cheker.py  mem_leak.ipynb  memory_leak.py  rm_generator.py  say_hello.py
vrp_study/: data_model.py  routing_manager.py
vrp_study/cp_sat_pdp/: pdptw_sat.py
vrp_study/ortools_routing_model/: routing_model.py
vrp_study/pdptw_model/: routing_model.py  solution_builder.py
